BugFix: FDQuery não é eliminada da memória após execução de queries
Considerado bug por acumulhar objetos de TFDQuery e nunca serem excluidos da memória

Este commit resolve este problema

--- a/LibGerenciadorDb_11_3.dproj
+++ b/LibGerenciadorDb_11_3.dproj
@@ -5,7 +5,7 @@
         <ProjectVersion>19.5</ProjectVersion>
         <FrameworkType>None</FrameworkType>
         <Base>True</Base>
-        <Config Condition="'$(Config)'==''">Debug</Config>
+        <Config Condition="'$(Config)'==''">Release</Config>
         <Platform Condition="'$(Platform)'==''">Win32</Platform>
         <TargetedPlatforms>1</TargetedPlatforms>
         <AppType>Package</AppType>
@@ -98,6 +98,7 @@
         <DCCReference Include="uSQLAttr.pas"/>
         <DCCReference Include="uUtility.pas"/>
         <DCCReference Include="uConexao.pas"/>
+        <DCCReference Include="uSQLContextBuilders.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
